# guideline-checker

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  GitVersion.yml  Makefile  README.md  cliff.toml  pyproject.toml  ruff.toml
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  enforce-feature-branch.yml  mutation-testing.yml  pre-commit.yml  quality-gate-check.yml  sonar.yml
guideline_checker/: __init__.py  checker.py  cli.py  hook.py  loader.py
guideline_checker/reporters/: html.py  json_reporter.py
scripts/: quality_gate.py
tests/: test_checker.py  test_cli.py  test_hook.py  test_html_reporter.py  test_json_reporter.py  test_loader.py
