[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guideline-checker"
version = "0.1.0"
description = "Check project compliance against GitHub Copilot instruction rules and generate HTML reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "chrysa" }]
keywords = ["copilot", "instructions", "compliance", "guidelines", "linting", "report"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "jinja2>=3.1",
    "tomli>=2.0; python_version < '3.11'",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
guideline-checker = "guideline_checker.cli:main"

[project.urls]
Homepage = "https://github.com/chrysa/guideline-checker"
Repository = "https://github.com/chrysa/guideline-checker"
Issues = "https://github.com/chrysa/guideline-checker/issues"
Changelog = "https://github.com/chrysa/guideline-checker/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["guideline_checker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=guideline_checker --cov-report=xml --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
